fix(web-components): fixes card button focus color in high contrast mode
fixes focus color of expand button in high contrast mode

--- a/packages/web-components/src/components/ic-card-vertical/ic-card-vertical.css
+++ b/packages/web-components/src/components/ic-card-vertical/ic-card-vertical.css
@@ -244,4 +244,9 @@ button {
       }
     }
   }
+
+  .toggle-button:focus,
+  .toggle-button:hover {
+    outline-color: Highlight;
+  }
 }
